<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ravenlair_title">Raven\'s Lair</string>
    <string name="ravenlair_summary">Unleash the Raven</string>
    <string name="dialog_team_title">The Team</string>
    <string name="lead_developer_title">Lead Developer</string>
    <string name="manager_title">Project Manager</string>
    <string name="core_developer_title">Core Developer</string>
    <string name="ui_developer_title">UI/UX Developer</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="graphics_title">Graphics Contributor</string>
    <string name="moderator_title">Telegram Moderator</string>
    <string name="light_settings_header">Light settings</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="battery_light_summary">Enable or disable Battery light while on DND, low battery</string>
    <string name="battery_light_enable">Battery light</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="navigation_system_title">System</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_hardware_title">Hardware</string>
    <string name="navigation_multitasking_title">Multitasking</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Miscellaneous tweaks</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure the power menu</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Tweaks specific to system notifications</string>
    <string name="misc_notifications">Misc Notifications Settings</string>
    <string name="dev_options_title">Developer options items</string>
    <string name="gestures_title">Gestures</string>
    <string name="gestures_summary">Make your device smart with some Gestures</string>
    <string name="statusbar_gestures">Statusbar Gestures</string>
    <string name="misc_gestures">Misc Gestures</string>
    <string name="lockscreen_gestures">Lockscreen Gestures</string>
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Tweaks specific to the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Customize the lockscreen</string>
    <string name="switch_settings_title">Misc lockscreen settings</string>
    <string name="fingerprint_title">Fingerprint Settings</string>
    <string name="battery_options_category">Battery Tweaks</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize the carrier label on the lockscreen or statusbar</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Configure the visibility of statusbar items</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="switch_category">Advanced Tweaks</string>
    <string name="incall_vibration_category">In-call Vibration</string>
    <string name="incall_vibrate_connect_title">Vibrate on Connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on Call Waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on Disconnect</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
    <string name="qs_media_player_title">Media player</string>
    <string name="qs_media_player_summary_on">Show media player in QS\nRequires a SystemUI restart</string>
    <string name="qs_media_player_summary_off">Show media player as a notification\nRequires a SystemUI restart</string>
    <string name="qs_tile_animation_title">Animations</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_datausage_title">Data usage in QS Header</string>
    <string name="qs_footer_text_show_title">Show QS footer text</string>
    <string name="qs_footer_text_string_title">Customize footer text</string>
    <string name="notification_headers_title">Notification Headers</string>
    <string name="notification_headers_summary">Show headers in the notification shade\nRequires a SystemUI restart</string>
    <string name="center_notification_headers_title">Center notification headers</string>
    <string name="center_notification_headers_summary">Whether to Center R style notification headers (Requires a SystemUI restart)</string>
    <string name="dashboard_stuff">Dashboard Settings</string>
    <string name="theming_settings_dashboard_icons_title">Settings dashboard icons</string>
    <string name="fod_icon_picker_category_title">FOD customization options</string>
    <string name="fod_icon_picker_title">FOD icon picker</string>
    <string name="fod_icon_picker_summary">Pick your favourite fingerprint icon</string>
    <string name="fod_icon_animation_summary">Animate the FOD icon while turning on the screen</string>
    <string name="fod_icon_animation_effect_title">Select the FOD icon animation effect</string>
    <string name="fod_icon_animation">Animated FOD icon</string>
    <string name="fod_recog_animation">Fingerprint animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="fod_recog_animation_effect_title">Fingerprint-on-display animation effect</string>
    <string name="fod_recog_animation_effect_summary">Select recognizing animation effect</string>
    <string name="fod_pressed_color_title">Fingerprint pressed color</string>
    <string name="fod_night_light_title">Disable night light when showing FOD</string>
    <string name="fod_night_light_summary">Disable night light on lockscreen if FOD is active. </string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="ringtone_focus_mode_title">Where to play ringtones from</string>
    <string name="qs_running_services_title">Running Services Icon</string>
    <string name="qs_running_services_summary">Enable the running services icon in the footer</string>
    <string name="ambient_decor_title">Ambient Options</string>
    <string name="ambient_decor_summary">Ambient decoration menu</string>
    <string name="headset_connect_player_title">Launch music app on headset connection</string>
    <string name="headset_connect_player_summary">Launch the default music app when headset is connected</string>
    <string name="radio_info_title">Radio info</string>
    <string name="show_clipboard_toast">Show clipboard access alerts</string>
    <string name="show_clipboard_toast_summary">Display a toast when an app tries to access the clipboard</string>
    <string name="notification_stat">Notification Settings</string>
    <string name="heads_up_notifications">Heads Up</string>
    <string name="heads_up_notifications_summary">Pop up statusbar notifications</string>
    <string name="gaming_mode_title">Gaming Mode</string>
    <string name="gaming_mode_summary">Customize gaming mode preferences</string>
    <string name="qs_columns_rows_category_title">QS columns and rows</string>
    <string name="qs_rows_portrait_title">Tiles rows on portrait</string>
    <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
    <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
    <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
    <string name="qs_tile_title_visibility_title">Show tiles title</string>
    <string name="animation_settings_title">Animations</string>
    <string name="animation_settings_summary">System Wide Animation Options</string>
    <string name="qs_brightness_category_title">Brightness slider</string>
    <string name="qs_show_brightness_slider_expanded_title">Expanded QS brightness slider</string>
    <string name="qs_show_brightness_slider_expanded_summary">Show brightness slider when expanded</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="qs_brightness_position_bottom_title">Brightness slider at bottom (Expanded QS)</string>
    <string name="qs_brightness_position_bottom_summary">Show the brightness slider on bottom of expanded quick settings</string>
    <string name="qqs_brightness_slider_title">QQS brightness slider</string>
    <string name="notif_count_title">Notification count</string>
    <string name="notif_count_summary">Show notification count near notfication icons</string>
    <string name="qs_media_category">QS Media options</string>
    <string name="artwork_media_background_title">Artwork media background</string>
    <string name="artwork_media_background_summary">Set media artwork as notification media background</string>
    <string name="custom_header_summary">Display image at top of the notification panel</string>
    <string name="custom_header_title">Custom header</string>
    <string name="qs_header_category">QS Header</string>
    <string name="qs_footer_category">QS Footer</string>
    <string name="cutout_main">Display Cutout</string>
    <string name="cutout_main_summary">They really cut corners with this one</string>
    <string name="qs_weather_title">QS weather</string>
    <string name="qs_weather_dialog_title">QS weather style</string>
    <string name="qs_weather_settings_title">Setup weather options</string>
    <string name="qs_weather_settings_summary">Setup icon pack and weather service</string>
    <string name="lockscreen_qs_disabled_title">Disable quick settings when locked</string>
    <string name="lockscreen_qs_disabled_summary">Disable expanding quick settings on secure lock screens</string>
    <string name="qs_status_background_title">QS Status icons background</string>
    <string name="qs_status_background_summary">Toggle status icon background in QS Panel (requires SystemUI reboot)</string>
    <string name="qs_panel_alpha_title">QS Panel opacity</string>
    <string name="notification_alpha_title">Notification background alpha</string>
</resources>