<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/quicksettings_title" >

    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="qs_panel_bg_use_new_tint"
        android:title="@string/qs_bg_use_new_tint"
        android:summary="@string/qs_bg_use_new_tint_summary"
        android:defaultValue="false" />

    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="qs_status_icon_background"
        android:title="@string/qs_status_background_title"
        android:summary="@string/qs_status_background_summary"
        android:defaultValue="false" />

    <com.corvus.support.preferences.SystemSettingSeekBarPreference
        android:key="qs_panel_bg_alpha"
        android:title="@string/qs_panel_alpha_title"
        android:defaultValue="255"
        android:max="255"
        settings:min="0"
        settings:units="" />

    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="status_bar_locked_on_secure_keyguard"
        android:title="@string/lockscreen_qs_disabled_title"
        android:summary="@string/lockscreen_qs_disabled_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:key="string/qs_brightness_category"
        android:title="@string/qs_brightness_category_title">

        <com.corvus.support.preferences.SecureSettingListPreference
            android:key="qqs_show_brightness_slider"
            android:title="@string/qqs_brightness_slider_title"
            android:entries="@array/qs_show_brightness_slider_entries"
            android:entryValues="@array/qs_show_brightness_slider_values"
            android:summary="%s"
            android:defaultValue="0" />

        <com.corvus.support.preferences.SecureSettingSwitchPreference
            android:key="qs_show_brightness_slider_show_expanded"
            android:title="@string/qs_show_brightness_slider_expanded_title"
            android:summary="@string/qs_show_brightness_slider_expanded_summary"
            android:defaultValue="true" />

        <com.corvus.support.preferences.SecureSettingSwitchPreference
            android:key="qs_brightness_position_bottom"
            android:title="@string/qs_brightness_position_bottom_title"
            android:summary="@string/qs_brightness_position_bottom_summary"
            android:dependency="qs_show_brightness_slider_show_expanded"
            android:defaultValue="false" />

        <com.corvus.support.preferences.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/qs_show_auto_brightness_title"
            android:summary="@string/qs_show_auto_brightness_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <!-- QS Rows&Columns -->
	<PreferenceCategory
            android:key="qs_columns_rows_category"
            android:title="@string/qs_columns_rows_category_title" >
        <com.corvus.support.preferences.CustomSystemSeekBarPreference
            android:key="qs_rows_portrait"
            android:title="@string/qs_rows_portrait_title"
            android:max="5"
            android:min="1"
            android:defaultValue="3"
            settings:units="" />

        <com.corvus.support.preferences.CustomSystemSeekBarPreference
            android:key="qs_rows_landscape"
            android:title="@string/qs_rows_landscape_title"
            android:max="5"
            android:min="1"
            android:defaultValue="1"
            settings:units="" />

        <com.corvus.support.preferences.CustomSystemSeekBarPreference
            android:key="qs_columns_portrait"
            android:title="@string/qs_columns_portrait_title"
            android:max="7"
            android:min="1"
            android:defaultValue="4"
            settings:units="" />

        <com.corvus.support.preferences.CustomSystemSeekBarPreference
            android:key="qs_columns_landscape"
            android:title="@string/qs_columns_landscape_title"
            android:max="9"
            android:min="1"
            android:defaultValue="4"
            settings:units="" />
        </PreferenceCategory>

    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="qs_tile_title_visibility"
        android:title="@string/qs_tile_title_visibility_title"
        android:defaultValue="true" />

           <!-- QS media player -->
    <PreferenceCategory
        android:key="media_category"
        android:title="@string/qs_media_category" >

        <com.corvus.support.preferences.SystemSettingSwitchPreference
            android:key="artwork_media_background"
            android:title="@string/artwork_media_background_title"
            android:summary="@string/artwork_media_background_summary"
            android:defaultValue="true" />

	<com.corvus.support.preferences.SystemSettingSwitchPreference
            android:key="qs_media_player"
            android:title="@string/qs_media_player_title"
            android:summaryOn="@string/qs_media_player_summary_on"
            android:summaryOff="@string/qs_media_player_summary_off"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_header_category"
        android:title="@string/qs_header_category" >

    <Preference
        android:key="custom_header"
        android:fragment="com.raven.lair.fragments.QsCustomHeaderSettings"
        android:title="@string/custom_header_title"
        android:summary="@string/custom_header_summary" />

    <com.corvus.support.preferences.SystemSettingListPreference
   	android:key="qs_show_weather_temp"
	android:title="@string/qs_weather_title"
	android:dialogTitle="@string/qs_weather_dialog_title"
	android:entries="@array/qs_weather_entries"
	android:entryValues="@array/qs_weather_values" />

    <Preference
        android:key="omnijaws_settings"
        android:title="@string/qs_weather_settings_title"
        android:summary="@string/qs_weather_settings_summary"
        android:fragment="com.raven.lair.fragments.OmniJawsSettings" />

    <com.corvus.support.preferences.SystemSettingListPreference 
        android:key="qs_datausage" 
        android:title="@string/qs_datausage_title" 
        android:entries="@array/qs_datausage_entries"
        android:entryValues="@array/qs_datausage_values"
        android:defaultValue="0" />

   <com.corvus.support.preferences.SecureSettingListPreference
        android:key="status_bar_quick_qs_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown"
        android:entries="@array/quick_pulldown_entries"
        android:entryValues="@array/quick_pulldown_values"
        android:defaultValue="1" />

    <com.corvus.support.preferences.SecureSettingSwitchPreference
        android:key="quick_settings_vibrate"
        android:title="@string/quick_settings_vibrate_title"
        android:summary="@string/quick_settings_vibrate_summary"
        android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="qs_footer_category"
        android:title="@string/qs_footer_category" >
   
     <!-- QS footer text toggle -->
    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="qs_footer_text_show"
        android:title="@string/qs_footer_text_show_title"
        android:defaultValue="false" />

    <!-- QS footer text string -->
    <com.corvus.support.preferences.SystemSettingEditTextPreference
        android:key="qs_footer_text_string"
        android:title="@string/qs_footer_text_string_title"
        android:dependency="qs_footer_text_show"
        android:defaultValue="#TheRavens" />

    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="qs_running_services_toggle"
        android:title="@string/qs_running_services_title"
        android:summary="@string/qs_running_services_summary"
        android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
