<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/miscellaneous_title" >

    <PreferenceCategory
        android:title="@string/switch_category">

    <!-- Launch music player when headset is connected -->
    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="headset_connect_player"
        android:title="@string/headset_connect_player_title"
        android:summary="@string/headset_connect_player_summary"
        android:defaultValue="false" />

    <!-- Gaming Mode -->
    <com.corvus.support.preferences.SystemSettingMasterSwitchPreference
        android:key="gaming_mode_enabled"
        android:fragment="com.raven.lair.fragments.GamingMode"
        android:title="@string/gaming_mode_title"
        android:summary="@string/gaming_mode_summary"
        android:defaultValue="false" />

    <PreferenceScreen
        android:key="cutout_settings"
        android:title="@string/cutout_main"
        android:summary="@string/cutout_main_summary"
        android:fragment="com.raven.lair.fragments.CutoutFragment" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dashboard_stuff" >

     <com.corvus.support.preferences.SystemSettingIntListPreference
            android:key="theming_settings_dashboard_icons"
            android:title="@string/theming_settings_dashboard_icons_title"
            android:entries="@array/theming_settings_dashboard_icons_entries"
            android:entryValues="@array/theming_settings_dashboard_icons_values"
            android:defaultValue="5" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="vibrate_on_connect"
        android:title="@string/incall_vibrate_connect_title"
        android:defaultValue="false" />

    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="vibrate_on_callwaiting"
        android:title="@string/incall_vibrate_call_wait_title"
        android:defaultValue="false" />

    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="vibrate_on_disconnect"
        android:title="@string/incall_vibrate_disconnect_title"
        android:defaultValue="false" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/dev_options_title">

        <ListPreference
            android:key="ringtone_focus_mode"
            android:title="@string/ringtone_focus_mode_title"
            android:entries="@array/ringtone_focus_mode_entries"
            android:entryValues="@array/ringtone_focus_mode_values" />

     <Preference
            android:title="@string/radio_info_title"
            android:key="radio_info_settings">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.settings.RadioInfo" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="quick_settings_animations"
        android:title="@string/qs_tile_animation_title">

       <Preference
            android:key="animations_category"
            android:title="@string/animation_settings_title"
            android:summary="@string/animation_settings_summary"
            android:fragment="com.raven.lair.fragments.AnimationSettings" />

        <ListPreference
            android:key="qs_tile_animation_style"
            android:title="@string/qs_tile_animation_style_title"
            android:entries="@array/qs_tile_animation_style_entries"
            android:entryValues="@array/qs_tile_animation_style_values"
            android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_duration"
            android:title="@string/qs_tile_animation_duration_title"
            android:entries="@array/qs_tile_animation_duration_entries"
            android:entryValues="@array/qs_tile_animation_duration_values"
            android:persistent="false" />

        <ListPreference
            android:key="qs_tile_animation_interpolator"
            android:title="@string/qs_tile_animation_interpolator_title"
            android:entries="@array/qs_tile_animation_interpolator_entries"
            android:entryValues="@array/qs_tile_animation_interpolator_values"
            android:persistent="false" />
    </PreferenceCategory>

    <!-- Clipboard access toast notification -->
    <com.corvus.support.preferences.SystemSettingSwitchPreference
        android:key="show_clipboard_toast"
        android:title="@string/show_clipboard_toast"
        android:summary="@string/show_clipboard_toast_summary"
        android:defaultValue="false" />
</PreferenceScreen>
