<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/notifications_title" >

    <Preference
         android:key="ambient_decor"
         android:title="@string/ambient_decor_title"
         android:summary="@string/ambient_decor_summary"
         android:fragment="com.raven.lair.fragments.AmbientDecorSettings" />

    <PreferenceCategory
        android:title="@string/light_settings_header">

        <Preference
            android:key="charging_light"
            android:title="@string/battery_light_settings"
            android:summary="@string/battery_light_summary"
            android:fragment="com.raven.lair.fragments.BatteryLightSettings" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification_stat"
        android:title="@string/notification_stat">

    <com.corvus.support.preferences.SystemSettingSeekBarPreference
        android:key="notification_bg_alpha"
        android:title="@string/notification_alpha_title"
        android:defaultValue="255"
        android:max="255"
        settings:min="0"
        settings:units="" />

    <com.corvus.support.preferences.GlobalSettingMasterSwitchPreference
        android:key="heads_up_notifications_enabled"
        android:fragment="com.raven.lair.fragments.HeadsUp"
        android:title="@string/heads_up_notifications"
        android:summary="@string/heads_up_notifications_summary"
        android:defaultValue="true" />

	    <com.corvus.support.preferences.SystemSettingSwitchPreference
	        android:key="status_bar_notif_count"
            android:title="@string/notif_count_title"
            android:summary="@string/notif_count_summary"
            android:defaultValue="false" />

        <com.corvus.support.preferences.SystemSettingSwitchPreference
            android:key="reticker_status"
            android:title="@string/reticker_title"
            android:summary="@string/reticker_summary"
            android:defaultValue="false" />

        <com.corvus.support.preferences.SystemSettingSwitchPreference
            android:dependency="reticker_status"
            android:key="reticker_colored"
            android:title="@string/reticker_colored_title"
            android:summary="@string/reticker_colored_summary"
            android:defaultValue="false" />
   </PreferenceCategory>

	    <com.corvus.support.preferences.SystemSettingSwitchPreference
            android:key="notification_headers"
            android:title="@string/notification_headers_title"
            android:summary="@string/notification_headers_summary"
            android:defaultValue="true" />

        <com.corvus.support.preferences.SystemSettingSwitchPreference
            android:key="center_notification_headers"
            android:title="@string/center_notification_headers_title"
            android:summary="@string/center_notification_headers_summary"
            android:dependency="notification_headers"
            android:defaultValue="true" />

</PreferenceScreen>
